--- a/holy_python_exercise.ipynb
+++ b/holy_python_exercise.ipynb
@@ -1719,8 +1719,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b2b5588a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "son's eye color\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict={\"son's name\": \"aucas\", \"son's eye color\": \"greeeeeeeeeen\", \"son's height\": 32, \"son's weight\": 25}\n",
+    "\n",
+    "#Write your answer here.\n",
+    "ans_1= min(dict)\n",
+    "\n",
+    "print(ans_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f3874462",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1001, 999, 101, 100, 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=[11, 100, 101, 999, 1001]\n",
+    "\n",
+    "#Type your answer here.\n",
+    "lst.sort(reverse=True)\n",
+    "\n",
+    "\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "1429ac94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b93f2e5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elc_members=[\"Ana\",\"Sof\",\"Diego\",\"Chio\",\"Lily\",\"July\",\"Pri\",\"Montse\",\"Carlos\",\"Vicky\",\"Isaias\",\"Z\",\"Gerry\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "16e4349f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def standup_order(elc_names,order):\n",
+    "    print(elc_names)\n",
+    "    if order == \"a_to_z\":\n",
+    "        a = elc_names.sort()\n",
+    "        return(a)\n",
+    "    if order == \"z_to_a\":\n",
+    "        return(elc_names.sort(reverse=True))\n",
+    "    if order == \"random\":\n",
+    "        return(random.shuffle(elc_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "e78aa67a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Chio', 'Sof', 'Carlos', 'Diego', 'Montse', 'Pri', 'Isaias', 'Gerry', 'Lily', 'Ana', 'Z', 'July', 'Vicky']\n"
+     ]
+    }
+   ],
+   "source": [
+    "standup_order(elc_members,\"a_to_z\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "432f2ca2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ana', 'Carlos', 'Chio', 'Diego', 'Gerry', 'Isaias', 'July', 'Lily', 'Montse', 'Pri', 'Sof', 'Vicky', 'Z']\n"
+     ]
+    }
+   ],
+   "source": [
+    "standup_order(elc_members,\"z_to_a\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "3a76e3e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Z', 'Vicky', 'Sof', 'Pri', 'Montse', 'Lily', 'July', 'Isaias', 'Gerry', 'Diego', 'Chio', 'Carlos', 'Ana']\n"
+     ]
+    }
+   ],
+   "source": [
+    "standup_order(elc_members,\"random\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f022790",
    "metadata": {},
    "outputs": [],
    "source": []
