--- a/holy_python_exercise.ipynb
+++ b/holy_python_exercise.ipynb
@@ -1965,16 +1965,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "aaa2d84b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How many days would you like to convert to a year?800\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# Type your answer here.\n",
     "\n",
     "message= input(\"How many days would you like to convert to a year?\")\n",
     "\n",
-    "result= int(message)/365\n",
+    "result= int(message)//365\n",
     "\n",
     "\n",
     "print(result)\n",
@@ -1983,10 +1992,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8983c025",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How many days would you like to convert to a year?800\n",
+      "2.191780821917808\n"
+     ]
+    }
+   ],
    "source": [
     "# Type your answer here.\n",
     "\n",
@@ -2021,7 +2039,9 @@
    "id": "3e350cc4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#API introduction"
+   ]
   }
  ],
  "metadata": {
