--- a/holy_python_exercise.ipynb
+++ b/holy_python_exercise.ipynb
@@ -1794,8 +1794,9 @@
    "outputs": [],
    "source": [
     "def standup_order(elc_names,order):\n",
-    "    print(elc_names)\n",
+    "    print(f\"names outside if statement: {elc_names})\n",
     "    if order == \"a_to_z\":\n",
+    "        print(f\"names outside if statement:{elc_names} )\n",
     "        a = elc_names.sort()\n",
     "        return(a)\n",
     "    if order == \"z_to_a\":\n",
